# QuickOutline

./: .gitignore  COMPOSE_RESOURCE_MIGRATION.md  Cargo.toml  DEV_DOC.md  Dev_doc.md  Dockerfile.linux-check  GEMINI.md  LICENSE  README.md  TODO.md  build.gradle  build.gradle.kts  compose-desktop.pro  gradlew.bat  package-lock.json  package.json  settings.gradle  svelte.config.js  tsconfig.json  vditor.bundle.css  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build-jpackage.yml  check.yml  gradle-publish.yml  gradle.yml  nightly-build.yml  release.yml
dev_notes/: EventBus_Analysis_Custom_vs_Guava.md  External_Editor_Sync_Implementation.md  Guice_and_EventBus_Architecture.md  JavaFX 自定义选择框 (StyledSelect) 开发实践与问题剖析.md  JavaFX_FXML_Injection_Notes.md  MessageComponent.md  PageLabel.md  PopupCard_Design_and_Usage.md  TAB_INDENT_BEHAVIOR.md  Thumbnail_Loading_Refactoring.md  Web_Frontend_Improvements_20251129.md  java_native_挑战.md  数学公式处理.md  数据驱动Bookmark实现.md
dev_notes/JavaFx/: AWT_to_JavaFX_Image_Conversion.md  Failed_Modular_View_Refactoring_Analysis.md  JavaFX_WebView_打包后资源加载问题.md  PopupCard_Design_and_Usage.md  SVG_ImageIO_Pipeline.md  Thumbnail_Loading_Refactoring.md  WebView_Tab键处理与焦点控制.md
dev_notes/PDF/: PDF显示.md  PDF标准.md  PageLabels.md  Rust_TOC_Extraction_Implementation.md  iText_svg_处理.md  tabtops.md
dev_notes/app/: Connection_Logic.md
dev_notes/architecture/: 资源管理与并发架构调研.md
dev_notes/compose/: DnD_拖拽打开文件_失效根因与修复.md  PopupCard_Positioning_Issue_And_Solution.md  RESOURCE_MIGRATION.md  StyledSlider_WhiteSquare_Debugging.md  TreeViewImplementation.md  state_management_remember_vs_inject.md  tab_indentation_logic.md
dev_notes/fix/: macos-wkpdf-pagination-and-page-size.md
dev_notes/frontend/: Drag_and_Drop_UX_Optimization.md  Flexbox_Overflow_and_Layout_Squeeze_Analysis.md  Interaction_Freezing_Bug_Analysis.md  PagedJS_DoubleBuffering_Style_Isolation.md  RadioButtonGroup_Border_Implementation.md  SplitPane_Resizer_Implementation.md  SplitPane拖拽优化.md  Svelte5_TwoWayBinding_Issues_20251208.md  TwoWaySync_Architecture_Analysis.md  WebView_按键与剪贴板处理终极方案.md  message实现.md  vite配置.md
dev_notes/tauri/: CLI启动参数传递.md  Tauri_IPC_Binary_Data_Handling.md
docs/: TOC_User_Guide.md
gradle/: libs.versions.toml
legacy/cm6/: MarkdownEditor_UserGuide.md  editor.html
messages/: en.json  zh-CN.json
mvn/: pom.xml
project.inlang/: settings.json
public/docs/: TOC_User_Guide.md
public/libs/: paged.polyfill.min.js  unocss-runtime.bundle.js
scripts/: build-outline-parser-cli.mjs  build-unocss-runtime.mjs  copy-katex-assets.mjs  copy-katex-fonts.mjs  copy-pagedjs.mjs  copy-pdfjs.mjs  debug-linux.sh  outline-parser-cli.ts  outline-parser-runtime.ts  paths.cjs  sign-sidecar.cjs  update-sidecar.cjs
server/: .gitignore  build.gradle
src/: App.svelte  index.html  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json5
src-tauri/binaries/: app-sidecar-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: external_editor.rs  java_sidecar.rs  lib.rs  outline_cli.rs  printer.rs  printer_headless.rs  printer_headless_chrome.rs  printer_native.rs  static_server.rs
src-tauri/src/pdf/: commands.rs  manager.rs  merge.rs  mod.rs  numbering.rs  page_label.rs  page_label_traits.rs  render.rs  toc.rs  toc_traits.rs
src-tauri/src/pdf/lopdf/: mod.rs  outline_adapter.rs  page_label_adapter.rs  toc_editor_adapter.rs  utils.rs
src-tauri/src/pdf/pdfium_render/: adapter.rs  analysis_adapter.rs  extractor.rs  merge.rs  mod.rs  render.rs  toc_merger_adapter.rs
src-tauri/src/pdf_analysis/: mod.rs  models.rs  processor.rs  text_metrics.rs  toc_analyser.rs  toc_extractor.rs  traits.rs
src-tauri/src/pdf_outline/: io.rs  mod.rs  model.rs  processor.rs  traits.rs
src-tauri/src/printer/: headless.rs  headless_chrome.rs  mod.rs  native.rs  native_linux.rs  native_macos.rs  native_windows.rs
src-tauri/tests/: pdf_bench_test.rs
src/assets/: global.css
src/cm6/: editor_entry.js
src/components/: AboutWindow.svelte  CollapseTrigger.svelte  ConfirmDialog.svelte  FileHeader.svelte  HeaderFooterEditor.svelte  HeaderFooterPopup.svelte  HelpWindow.svelte  Icon.svelte  LeftPane.svelte  MdEditor.svelte  Modal.svelte  PageLabelPreviewPane.svelte  PageSetupPopup.svelte  Preview.svelte  PreviewPopup.svelte  PreviewTooltip.svelte  RpcProvider.svelte  SectionEditor.svelte  Settings.svelte  SettingsPopup.svelte  SplitPane.svelte  StatusBar.svelte  StatusBarItem.svelte  StyleList.svelte  ThumbnailPane.svelte  TocEditor.svelte  TocGuide.svelte  Tooltip.svelte  VditorEditor.svelte
src/legacy/: TreeWebVIewController.java  TreeWebView.fxml
src/lib/: styleMaps.ts  toc-generator.ts  toc.css
src/stores/: appStore.svelte.ts  appStore.ts  bookmarkStore.svelte.ts  confirm.svelte.ts  connectionStore.svelte.ts  docStore.svelte.ts  docStore.ts  markdownStore.svelte.ts  messageStore.svelte.ts  messageStore.ts  offsetStore.svelte.ts  pageLabelStore.svelte.ts  pageLabelStore.ts  printStore.svelte.ts  tocStore.svelte.ts
src/test/: index.html
src/types/: jsx.d.ts  modules.d.ts  pagedjs.d.ts  paraglide-shim.d.ts
src/workers/: paged-prepare.worker.ts
web/: .gitignore  download-pdfjs.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  update-sidecar.cjs  vite.config.ts  权限问题.md
web-editor/: build.js  editor_entry.js  meta.json  package-lock.json  package.json  tsconfig.json  vditor_entry.js  vditor_entry.ts
web/scripts/: sign-sidecar.cjs  (+1 more)
(+869 files in other folders)
