[package]
name = "quickoutline"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickoutline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
reqwest = { version = "0.11", features = ["blocking", "stream"] } # Use blocking for simplicity in thread or async stream
zip = "0.6"
tar = "0.4"
flate2 = "1.0"


[target.'cfg(windows)'.dependencies]
webview2-com = "0.27"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5" }
objc2-foundation = { version = "0.2", features = ["all"] }
objc2-web-kit = { version = "0.2", features = ["all"] }
block2 = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"
