[package]
name = "quickoutline"
version = "0.1.0"
description = "Not just another PDF editor"
authors = ["ririv"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickoutline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.13.1", features = ["blocking", "rustls"], default-features = false }
zip = "7.0.0"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-cli = "2"
tauri-plugin-log = "2"
log = "0.4"
reqwest = { version = "0.13.1", features = ["blocking", "stream"] } # Use blocking for simplicity in thread or async stream
zip = "7.0.0"
headless_chrome = "1.0"
uuid = { version = "1.19", features = ["v4"] }
anyhow = "1.0"
tiny_http = "0.12.0"
pdfium-render = { version = "0.8", features = ["image"] }
lopdf = "0.38.0"
tokio = { version = "1", features = ["full"] }
image = "0.25.9"
notify = "8.0.0"
tempfile = "3.24.0"
regex = "1.10"
once_cell = "1.19"
rayon = "1.10"


[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.0"
windows-core = "0.61.2"
windows-implement = "0.60.2"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3" }
objc2-foundation = { version = "0.3.2"}
objc2-web-kit = { version = "0.3.2" }
objc2-app-kit = { version = "0.3.2" }
block2 = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"